Tentative work on optimizing things

--- a/src/test/resources/expected/forAndIfTest.html
+++ b/src/test/resources/expected/forAndIfTest.html
@@ -2,17 +2,17 @@
     <title>Test page</title>
 </head>
 <body>
-    <h5>First IF</h5>
+    <h5>First for</h5>
         <span>one</span>
         <span>two</span>
         <span>three</span>
     <hr />
-    <h5>Second IF</h5>
+    <h5>Second for</h5>
         <span>one</span>
         <span>two</span>
         <span>three</span>
     <hr />
-    <h5>Third IF</h5>
+    <h5>Third for</h5>
         <span>0 : one</span>
         <span>1 : two</span>
         <span>2 : three</span>
