Bug fix for else without if statement

--- a/src/test/resources/expected/forAndIfTest.html
+++ b/src/test/resources/expected/forAndIfTest.html
@@ -24,4 +24,6 @@
     <hr />
     <h5>Complex if</h5>
         <p>Bigger</p>
+    <h5>Even more complex if</h5>
+            <p>Greater and greater than 3</p>
 </body>
