Started work on `@insertAt` element [WIP]

--- a/src/test/resources/section/simpleSectionTest.java.html
+++ b/src/test/resources/section/simpleSectionTest.java.html
@@ -1,10 +1,14 @@
 @args(int inputVar)
 <html>
 <body>
+    @section("css") {
+        <p>Start of css section</p>
+    }
+
     <div>This is in the main content: @inputVar</div>
 
-    @section("testSection") {
-        <p>Start of section</p>
+    @section("javascript") {
+        <p>Start of javascript section</p>
     }
 </body>
 </html>
