--- a/src/test/resources/section/expected/simpleSectionTest.html
+++ b/src/test/resources/section/expected/simpleSectionTest.html
@@ -1,6 +1,7 @@
 <html>
 <body>
+        <p>Start of css section</p>
     <div>This is in the main content: 3</div>
-        <p>Start of section</p>
+        <p>Start of javascript section</p>
 </body>
 </html>
