Bug fixes in preparation for @insertAt

--- a/src/test/resources/section/expected/simpleSectionTest.html
+++ b/src/test/resources/section/expected/simpleSectionTest.html
@@ -1,7 +1,12 @@
 <html>
 <body>
         <p>Start of css section</p>
+        <p>CSS section from fragment: 3</p>
     <div>This is in the main content: 3</div>
+<div>
+    <p>This is the main content from the fragment</p>
+</div>
         <p>Start of javascript section</p>
+        <p>JavaScript section from fragment: 3</p>
 </body>
 </html>
