--- a/src/test/resources/section/simpleSectionTest.java.html
+++ b/src/test/resources/section/simpleSectionTest.java.html
@@ -6,6 +6,7 @@
     }
 
     <div>This is in the main content: @inputVar</div>
+    @toBeInserted.template(inputVar)
 
     @section("javascript") {
         <p>Start of javascript section</p>
