Element @insertAt working (optimisation needed)

--- a/src/test/resources/section/toBeInserted.java.html
+++ b/src/test/resources/section/toBeInserted.java.html
@@ -1,6 +1,6 @@
 @args(int inputVar)
 <div>
-    <p>This is the main content from the fragment</p>
+    <p>This is the main content from the fragment: @(inputVar + 1)</p>
 </div>
 
 @insertAt("css") {
