--- a/src/test/resources/section/expected/simpleSectionTest.html
+++ b/src/test/resources/section/expected/simpleSectionTest.html
@@ -1,12 +1,12 @@
 <html>
 <body>
         <p>Start of css section</p>
-        <p>CSS section from fragment: 3</p>
+    <p>CSS section from fragment: 3</p>
     <div>This is in the main content: 3</div>
 <div>
-    <p>This is the main content from the fragment</p>
+    <p>This is the main content from the fragment: 4</p>
 </div>
         <p>Start of javascript section</p>
-        <p>JavaScript section from fragment: 3</p>
+    <p>JavaScript section from fragment: 3</p>
 </body>
 </html>
