Bug fixes and started optimization for @insertAt

--- a/src/test/resources/section/expected/simpleSectionTest.html
+++ b/src/test/resources/section/expected/simpleSectionTest.html
@@ -3,10 +3,13 @@
         <p>Start of css section</p>
     <p>CSS section from fragment: 3</p>
     <div>This is in the main content: 3</div>
+    <div>This is in the main content: 4</div>
 <div>
     <p>This is the main content from the fragment: 4</p>
+    <p>This is the main content from the fragment: 5</p>
 </div>
         <p>Start of javascript section</p>
     <p>JavaScript section from fragment: 3</p>
+    <p>JavaScript section from fragment: 4</p>
 </body>
 </html>
