--- a/src/test/resources/section/simpleSectionTest.java.html
+++ b/src/test/resources/section/simpleSectionTest.java.html
@@ -7,6 +7,7 @@
 
     <div>This is in the main content: @inputVar</div>
     @toBeInserted.template(inputVar)
+    @toBeInserted.template(inputVar + 1)
 
     @section("javascript") {
         <p>Start of javascript section</p>
