Optimized and working `@insertAt` element

--- a/src/test/resources/section/expected/simpleSectionTest.html
+++ b/src/test/resources/section/expected/simpleSectionTest.html
@@ -1,15 +1,21 @@
 <html>
 <body>
-        <p>Start of css section</p>
-    <p>CSS section from fragment: 3</p>
+    <style>
+        .body
+        .button3
+        .button4
+    </style>
     <div>This is in the main content: 3</div>
-    <div>This is in the main content: 4</div>
 <div>
     <p>This is the main content from the fragment: 4</p>
+</div>
+<div>
     <p>This is the main content from the fragment: 5</p>
 </div>
-        <p>Start of javascript section</p>
-    <p>JavaScript section from fragment: 3</p>
-    <p>JavaScript section from fragment: 4</p>
+    <script>
+        var status = "active";
+        document.getElementById("button3").setStatus("active");
+        document.getElementById("button4").setStatus("active");
+    </script>
 </body>
 </html>
