--- a/src/test/resources/section/simpleSectionTest.java.html
+++ b/src/test/resources/section/simpleSectionTest.java.html
@@ -1,16 +1,20 @@
 @args(int inputVar)
 <html>
 <body>
+    <style>
     @section("css") {
-        <p>Start of css section</p>
+        .body
     }
+    </style>
 
     <div>This is in the main content: @inputVar</div>
     @toBeInserted.template(inputVar)
     @toBeInserted.template(inputVar + 1)
 
+    <script>
     @section("javascript") {
-        <p>Start of javascript section</p>
+        var status = "active";
     }
+    </script>
 </body>
 </html>
