Bug fixes and improvements for HTMl parsing

--- a/src/test/resources/expected/forAndIfTest.html
+++ b/src/test/resources/expected/forAndIfTest.html
@@ -17,6 +17,12 @@
         <span>1 : two</span>
         <span>2 : three</span>
     <hr />
+    <h5>For with if statements</h5>
+            <p>We reached 10</p>
+            <p>We reached 20</p>
+                <p>We reached 30</p>
+                <p>We reached 40</p>
+    <hr />
     <h5>Simple IF</h5>
     <hr />
     <h5>If-else</h5>
