--- a/src/test/resources/section/expected/sectionTest.html
+++ b/src/test/resources/section/expected/sectionTest.html
@@ -2,9 +2,13 @@
 <body>
     <style>
         .body
-        .button10
+        .button10 {
+            color: red;
+        }
         .buttonCss
-        .button11
+        .button11 {
+            color: red;
+        }
     </style>
     <div>This is in the main content: 10</div>
 <div>
