--- a/src/test/resources/section/expected/simpleSectionTest.html
+++ b/src/test/resources/section/expected/simpleSectionTest.html
@@ -1,9 +1,15 @@
 <html>
 <body>
     <style>
-        .body
-        .button3
-        .button4
+        .body {
+            color: red;
+        }
+        .button3 {
+            color: red;
+        }
+        .button4 {
+            color: red;
+        }
     </style>
     <div>This is in the main content: 3</div>
 <div>
