--- a/src/test/resources/section/simpleSectionTest.java.html
+++ b/src/test/resources/section/simpleSectionTest.java.html
@@ -3,7 +3,9 @@
 <body>
     <style>
     @section("css") {
-        .body
+        .body {
+            color: red;
+        }
     }
     </style>
 
