--- a/src/test/resources/section/toBeInserted.java.html
+++ b/src/test/resources/section/toBeInserted.java.html
@@ -4,7 +4,9 @@
 </div>
 
 @insertAt("css") {
-        .button@myVar
+        .button@myVar {
+            color: red;
+        }
 }
 
 @insertAt("javascript") {
